--- a/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/locale/zh_Hans/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-24 18:37+0800\n"
+"POT-Creation-Date: 2017-02-25 23:14+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -159,8 +159,8 @@ msgstr ""
 "    注册后你可以去录音页。    在那里你会看到拼音你可以记录使用记录按钮    "
 "点    击停止按钮，当你完成录音，按播放按钮，听你的录音。    如有必要重新启动"
 "录音或    点击上传按钮上传您的录音。    录制后上传一个新的拼音单词将被记录。 "
-"<br>    你可以做尽可能多的录音，你可以回来后，本页作出更多的录音。<br>    "
-"接下来一些    拼音和录音的例子："
+"<br>    你可以做尽可能多的录音，你可以回来后，本页作出更多的录音。<br>    接"
+"下来一些    拼音和录音的例子："
 
 #: recording/templates/about.html:46
 msgid "mā as in 妈 (first tone)"
@@ -211,12 +211,10 @@ msgid ""
 "        "
 msgstr ""
 "\n"
-" 本网站所使用的录音采用知"
-
-"        <a rel=\"license\" href=\"https://creativecommons.org/licenses/by-"
-"sa/4.0/\">\n"
-"            知识共享署名 4.0 国际许可协议 "
-"</a>。 它们属于Bankey Kung，张丹。 <br>\n"
+" 本网站所使用的录音采用知        <a rel=\"license\" href=\"https://"
+"creativecommons.org/licenses/by-sa/4.0/\">\n"
+"            知识共享署名 4.0 国际许可协议 </a>。 它们属于Bankey Kung，张丹。 "
+"<br>\n"
 "        "
 
 #: recording/templates/about.html:98
@@ -232,6 +230,7 @@ msgstr ""
 "        <a rel=\"license\" href=\"https://www.gnu.org/licenses/agpl.html\">\n"
 "            GNU Affero通用公共许可证</a>。\n"
 "        "
+
 #: recording/templates/recording.html:16
 #, python-format
 msgid ""
@@ -356,18 +355,18 @@ msgstr ""
 "sa/4.0/'>Creative Commons CC BY-SA 4许可</a>下发布。"
 
 #: registration/models.py:84
-msgid "Pinyin 1"
-msgstr "拼音一"
+msgid "Pinyin Captcha 1"
+msgstr "拼音验证码一"
 
 #: registration/models.py:88
-msgid "Pinyin 2"
-msgstr "拼音二"
+msgid "Pinyin Captcha 2"
+msgstr "拼音验证码二"
 
 #: registration/models.py:91
-msgid "Pinyin 3"
-msgstr "拼音三"
+msgid "Pinyin captcha 3"
+msgstr "拼音验证码三"
 
-#: registration/models.py:117
+#: registration/models.py:118
 msgid ""
 "Wrong pinyin, please try again. Tones must be included (i.e., write ma1 if "
 "you hear 妈, ma5 if you hear 吗)."
@@ -427,5 +426,8 @@ msgstr "感谢使用我们的网站！"
 
 #: reset_password/templates/password_reset_email.html:12
 #, python-format
-msgid "The Mandarinrecording team"
-msgstr "普通话录音团队"
+msgid "The %(site_name)s team"
+msgstr ""
+
+#~ msgid "The Mandarinrecording team"
+#~ msgstr "普通话录音团队"
